force-app/main/default/objects/BMCServiceDesk__ChatDetail__c/BMCServiceDesk__ChatDetail__c.object-meta.xml
<CustomObject>
    <description>This will store the message details for every chat instance across Remedyforce.</description>
    <label>Chat Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>