force-app/main/default/objects/BMCServiceDesk__ChatDetail__c/fields/BMCServiceDesk__FKChatInstance__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChatInstance__c</fullName>
    <label>Chat Instance</label>
    <referenceTo>BMCServiceDesk__ChatInstance__c</referenceTo>
    <relationshipLabel>Chat Details</relationshipLabel>
    <relationshipName>Chat_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>