force-app/main/default/objects/BMCServiceDesk__ChatDetail__c/fields/BMCServiceDesk__FKSender__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the user who has sent the chat message</description>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chat_Details</relationshipName>
    <type>Lookup</type>
</CustomField>