force-app/main/default/objects/BMCServiceDesk__ChatDetail__c/fields/BMCServiceDesk__IsMessageRead__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IsMessageRead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Message Read</label>
    <type>Checkbox</type>
</CustomField>