force-app/main/default/objects/BMCServiceDesk__ChatDetail__c/fields/BMCServiceDesk__Message__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Message__c</fullName>
    <description>Stores the chat message sent.</description>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>